[Qt][WK2] fast/viewport/viewport-91.html still fails after r121555 and r121661 https://bugs.webkit.org/show_bug.cgi?id=90376

Reviewed by Csaba Osztrogonác.

Source/WebCore:

No new tests, this is only a build alignment.

Export ViewportArguments::deprecatedTargetDPI since it is used in WebKit2.
* WebCore.exp.in:

Source/WebKit2:

layoutTestController.dumpConfigurationForViewport still need
to use the constant target DPI of 160.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::viewportConfigurationAsText):

LayoutTests:

Unskip passing test.
* platform/qt-5.0-wk2/Skipped:

Canonical link: https://commits.webkit.org/108300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121740 268f45cc-cd09-0410-ab3c-d52691b4dbfc